--- a/arch/arm64/configs/silont-perf_defconfig
+++ b/arch/arm64/configs/silont-perf_defconfig
@@ -1509,6 +1509,7 @@ CONFIG_HDCP_QSEECOM=y
 CONFIG_QSEECOM=y
 # CONFIG_PCI_ENDPOINT_TEST is not set
 CONFIG_QPNP_MISC=y
+CONFIG_BATTERY_SAVER=y
 # CONFIG_TEST_IRQ_REQUESTER is not set
 # CONFIG_C2PORT is not set
 
