--- a/arch/arm64/configs/silont-perf_defconfig
+++ b/arch/arm64/configs/silont-perf_defconfig
@@ -47,7 +47,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="--SiLonT-Arjasa"
+CONFIG_LOCALVERSION="-SiLonT-Arjasa"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_BUILD_SALT=""
 CONFIG_DEFAULT_HOSTNAME="(none)"
@@ -4588,7 +4588,6 @@ CONFIG_QCOM_SMD_RPM=y
 CONFIG_QCOM_SCM=y
 # CONFIG_QCOM_SCM_QCPE is not set
 # CONFIG_QCOM_MEMORY_DUMP_V2 is not set
-# CONFIG_MSM_DEBUG_LAR_UNLOCK is not set
 CONFIG_QCOM_WATCHDOG_V2=y
 CONFIG_QCOM_FORCE_WDOG_BITE_ON_PANIC=y
 # CONFIG_QCOM_WDOG_IPI_ENABLE is not set
