--- a/arch/arm64/configs/silont-perf_defconfig
+++ b/arch/arm64/configs/silont-perf_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.14.213 Kernel Configuration
+# Linux/arm64 4.14.214 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -291,6 +291,7 @@ CONFIG_SHADOW_CALL_STACK_VMAP=y
 CONFIG_HAVE_CONTEXT_TRACKING=y
 CONFIG_HAVE_VIRT_CPU_ACCOUNTING_GEN=y
 CONFIG_HAVE_IRQ_TIME_ACCOUNTING=y
+CONFIG_HAVE_MOVE_PMD=y
 CONFIG_HAVE_ARCH_TRANSPARENT_HUGEPAGE=y
 CONFIG_HAVE_ARCH_HUGE_VMAP=y
 CONFIG_HAVE_MOD_ARCH_SPECIFIC=y
@@ -1509,8 +1510,8 @@ CONFIG_HDCP_QSEECOM=y
 CONFIG_QSEECOM=y
 # CONFIG_PCI_ENDPOINT_TEST is not set
 CONFIG_QPNP_MISC=y
-CONFIG_BATTERY_SAVER=y
 # CONFIG_TEST_IRQ_REQUESTER is not set
+CONFIG_BATTERY_SAVER=y
 # CONFIG_C2PORT is not set
 
 #
