--- a/arch/arm64/configs/silont-perf_defconfig
+++ b/arch/arm64/configs/silont-perf_defconfig
@@ -801,6 +801,8 @@ CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_BOOST=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 # CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
+CONFIG_CPU_FREQ_DEFAULT_LITTLE_MIN=0
+CONFIG_CPU_FREQ_DEFAULT_BIG_MIN=0
 
 #
 # CPU frequency scaling drivers
@@ -835,6 +837,8 @@ CONFIG_XFRM_IPCOMP=y
 CONFIG_NET_KEY=y
 # CONFIG_NET_KEY_MIGRATE is not set
 CONFIG_INET=y
+CONFIG_WIREGUARD=y
+# CONFIG_WIREGUARD_DEBUG is not set
 CONFIG_IP_MULTICAST=y
 CONFIG_IP_ADVANCED_ROUTER=y
 # CONFIG_IP_FIB_TRIE_STATS is not set
@@ -5527,9 +5531,11 @@ CONFIG_CC_HAS_SANCOV_TRACE_PC=y
 # CONFIG_PANIC_ON_OOPS is not set
 CONFIG_PANIC_ON_OOPS_VALUE=0
 CONFIG_PANIC_TIMEOUT=5
+CONFIG_SCHED_DEBUG=y
 # CONFIG_SCHED_INFO is not set
 # CONFIG_PANIC_ON_SCHED_BUG is not set
 # CONFIG_PANIC_ON_RT_THROTTLING is not set
+# CONFIG_SCHEDSTATS is not set
 # CONFIG_DEBUG_TIMEKEEPING is not set
 
 #
