Makefile: fix depmod error for inline compilation
Signed-off-by: rzlamrr <rizal82rebel@gmail.com>

--- a/net/wireguard/Makefile
+++ b/net/wireguard/Makefile
@@ -8,7 +8,7 @@ PREFIX ?= /usr
 DESTDIR ?=
 SRCDIR ?= $(PREFIX)/src
 DKMSDIR ?= $(SRCDIR)/wireguard
-DEPMOD ?= depmod
+DEPMOD ?= /sbin/depmod
 DEPMODBASEDIR ?= /
 
 PWD := $(shell pwd)
