--- a/arch/arm64/configs/silont-perf_defconfig
+++ b/arch/arm64/configs/silont-perf_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.14.218 Kernel Configuration
+# Linux/arm64 4.14.221 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -3111,7 +3111,7 @@ CONFIG_V4L_PLATFORM_DRIVERS=y
 # CONFIG_SPECTRA_CAMERA is not set
 # CONFIG_MSM_AIS is not set
 CONFIG_MSM_CAMERA=y
-CONFIG_MSM_CAMERA_DEBUG=y
+# CONFIG_MSM_CAMERA_DEBUG is not set
 CONFIG_MSMB_CAMERA=y
 CONFIG_MSMB_CAMERA_DEBUG=y
 CONFIG_MSM_CAMERA_SENSOR=y
@@ -3348,7 +3348,7 @@ CONFIG_DRM_SDE_WB=y
 # CONFIG_DRM_SDE_SHD is not set
 # CONFIG_DRM_SDE_SHP is not set
 CONFIG_DRM_MSM_KCAL_CTRL=y
-CONFIG_DRM_SDE_EVTLOG_DEBUG=y
+# CONFIG_DRM_SDE_EVTLOG_DEBUG is not set
 CONFIG_DRM_SDE_RSC=y
 # CONFIG_DRM_MSM_LEASE is not set
 CONFIG_DRM_PANEL=y
