net: wireguard: fix double definition * ci: use own image
Signed-off-by: rzlamrr <rizal82rebel@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,17 +2,15 @@ version: 2.1
 jobs:
   compile:
    docker:
-      - image: fadlyas/kernel_dockerfile:latest
+      - image: rzlamrr/kernel_compile:latest
    steps:
       - run:
           command: |
-           apt update -qq -y && apt install -qq -y openjdk-11-jre-headless
            git clone --depth=1 https://github.com/silont-project/kernel_xiaomi_ginkgo -b x10 silont
            cd silont
            wget -q https://github.com/rzlamrr/scripts/raw/master/KERNEL/compile.sh
            chmod +x compile.sh
-           bash compile.sh -c silont -d silont-perf_defconfig -cn Arjasa
-           ls
+           bash compile.sh -c proton -d silont-perf_defconfig -cn Arjasa
 workflows:
   version: 2.1
   cooking:
